WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257261
[IFC][Float] Incorrectly placed float boxes may generate series of empty lines
https://bugs.webkit.org/show_bug.cgi?id=257261
Summary
[IFC][Float] Incorrectly placed float boxes may generate series of empty lines
zalan
Reported
2023-05-24 08:20:54 PDT
<
rdar://108742128
>
Attachments
Patch
(7.89 KB, patch)
2023-05-24 09:04 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-05-24 09:04:14 PDT
Created
attachment 466481
[details]
Patch
EWS
Comment 2
2023-05-26 06:48:10 PDT
Committed
264579@main
(9d3c89bfe30c): <
https://commits.webkit.org/264579@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466481
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug