Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp
@@ -49,7 +49,8 @@ InlineFormattingGeometry::InlineFormattingGeometry(const InlineFormattingContext
 
 InlineLayoutUnit InlineFormattingGeometry::logicalTopForNextLine(const LineBuilder::LineContent& lineContent, const InlineRect& lineLogicalRect, const FloatingContext& floatingContext) const
 {
-    if (!lineContent.committedRange.isEmpty()) {
+    auto didManageToPlaceInlineContentOrFloat = !lineContent.committedRange.isEmpty();
+    if (didManageToPlaceInlineContentOrFloat) {
         // Normally the next line's logical top is the previous line's logical bottom, but when the line ends
         // with the clear property set, the next line needs to clear the existing floats.
         if (lineContent.runs.isEmpty())
@@ -62,25 +63,32 @@ InlineLayoutUnit InlineFormattingGeometry::logicalTopForNextLine(const LineBuild
             return lineLogicalRect.bottom();
         return std::max(lineLogicalRect.bottom(), InlineLayoutUnit(positionWithClearance->position));
     }
-    // Floats must have prevented us placing any content on the line.
-    // Move the next line below the intrusive float(s).
-    ASSERT(lineContent.runs.isEmpty() || lineContent.runs[0].isLineSpanningInlineBoxStart());
-    ASSERT(lineContent.hasIntrusiveFloat);
-    // FIXME: Moving the bottom position by the initial line height may be too much meaning that we miss vertical positions where atomic inline content could very well fit.
-    // The spec is unclear of how much we should move down at this point and while 1px should be the most precise it's also rather expensive. 
-    auto inflatedLineRectBottom = lineLogicalRect.top() + formattingContext().root().style().computedLineHeight();
-    auto floatConstraints = floatingContext.constraints(toLayoutUnit(lineLogicalRect.top()), toLayoutUnit(inflatedLineRectBottom), FloatingContext::MayBeAboveLastFloat::Yes);
-    if (floatConstraints.left && floatConstraints.right) {
-        // In case of left and right constraints, we need to pick the one that's closer to the current line.
-        return std::min(floatConstraints.left->y, floatConstraints.right->y);
-    }
-    if (floatConstraints.left)
-        return floatConstraints.left->y;
-    if (floatConstraints.right)
-        return floatConstraints.right->y;
-    ASSERT_NOT_REACHED();
+
+    auto intrusiveFloatBottom = [&]() -> InlineLayoutUnit {
+        // Floats must have prevented us placing any content on the line.
+        // Move the next line below the intrusive float(s).
+        ASSERT(lineContent.runs.isEmpty() || lineContent.runs[0].isLineSpanningInlineBoxStart());
+        ASSERT(lineContent.hasIntrusiveFloat);
+        // FIXME: Moving the bottom position by the initial line height may be too much meaning that we miss vertical positions where atomic inline content could very well fit.
+        // The spec is unclear of how much we should move down at this point and while 1px should be the most precise it's also rather expensive.
+        auto inflatedLineRectBottom = lineLogicalRect.top() + formattingContext().root().style().computedLineHeight();
+        auto floatConstraints = floatingContext.constraints(toLayoutUnit(lineLogicalRect.top()), toLayoutUnit(inflatedLineRectBottom), FloatingContext::MayBeAboveLastFloat::Yes);
+        if (floatConstraints.left && floatConstraints.right) {
+            // In case of left and right constraints, we need to pick the one that's closer to the current line.
+            return std::min(floatConstraints.left->y, floatConstraints.right->y);
+        }
+        if (floatConstraints.left)
+            return floatConstraints.left->y;
+        if (floatConstraints.right)
+            return floatConstraints.right->y;
+        // If we didn't manage to place a content on this vertical position due to intrusive floats, we have to have
+        // at least one float here. However due to bugs in float positioning, we may end up with gaps between floats in vertical direction.
+        // In such cases let's just go with the bottom most float we have here.
+        ASSERT_NOT_REACHED();
+        return std::max<InlineLayoutUnit>(lineLogicalRect.bottom(), floatingContext.bottom().value_or(0_lu));
+    };
     // Do not get stuck on the same vertical position.
-    return nextafter(lineLogicalRect.bottom(), std::numeric_limits<float>::max());
+    return std::max(intrusiveFloatBottom(), nextafter(lineLogicalRect.bottom(), std::numeric_limits<float>::max()));
 }
 
 ContentWidthAndMargin InlineFormattingGeometry::inlineBlockContentWidthAndMargin(const Box& formattingContextRoot, const HorizontalConstraints& horizontalConstraints, const OverriddenHorizontalValues& overriddenHorizontalValues) const
